--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-        <link rel="stylesheet" href="/css/estilo.css">
+		<link rel="stylesheet" href="/css/estilo.css" />
 	</head>
 	<body>
 		<h1>Mi nueva pagina</h1>
 		<h1>Segundo commit</h1>
+		<div>
+			<p>
+				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat tempora, repudiandae
+				laboriosam asperiores minima excepturi neque suscipit laudantium explicabo inventore
+				consequuntur qui ullam, aut esse illo nulla sunt quas quo!
+			</p>
+		</div>
 	</body>
 </html>
