--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 			<p>
 				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat tempora, repudiandae
 				laboriosam asperiores minima excepturi neque suscipit laudantium explicabo inventore
-				consequuntur qui ullam, aut esse illo nulla sunt quas quo!
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque ducimus dicta natus sunt. Hic aliquid minima eius velit labore quas praesentium voluptate minus quia et ad, qui facere perspiciatis perferendis!
+				consequuntur qui ullam, aut esse illo nulla sunt quas quo! Lorem ipsum, dolor sit amet
+				consectetur adipisicing elit. Itaque ducimus dicta natus sunt. Hic aliquid minima eius velit
+				labore quas praesentium voluptate minus quia et ad, qui facere perspiciatis perferendis!
 			</p>
 		</div>
 	</body>
