Saludo javascript agregado

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="/css/estilo.css" />
+		<script src="/js/javascript.js"></script>
 	</head>
 	<body>
 		<h1>Mi nueva pagina</h1>
@@ -18,6 +19,7 @@
 				consectetur adipisicing elit. Itaque ducimus dicta natus sunt. Hic aliquid minima eius velit
 				labore quas praesentium voluptate minus quia et ad, qui facere perspiciatis perferendis!
 			</p>
+			<input type="button" onclick="saludo()" value="Dale Ya" />
 		</div>
 	</body>
 </html>
